PCI: Remove spurious error for sriov_numvfs store and simplify flow (bsc#923260 bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -2136,6 +2136,7 @@
 	patches.fixes/PCI-SRIOV-control-and-status-via-sysfs.patch
 	patches.fixes/PCI-Provide-method-to-reduce-the-number-of-total-VFs.patch
 	patches.fixes/PCI-Remove-useless-dev-tests.patch
+	patches.fixes/PCI-Remove-spurious-error-for-sriov_numvfs-store-and.patch
 	patches.fixes/pci-Set-dev-dev.type-in-alloc_pci_dev.patch
 	patches.fixes/pci-Add-SRIOV-helper-function-to-determine-if-VFs-ar.patch
 	patches.fixes/PCI-Return-ENOSYS-for-SR-IOV-operations-on-non-SR-IO.patch
