NVMe: Return 0 from make request on ended bio (bsc#926480).

--- a/series.conf
+++ b/series.conf
@@ -7754,7 +7754,7 @@
 	patches.drivers/nvme-0247-Do-not-over-allocate-for-discard-requests.patch
 	patches.drivers/nvme-0248-make-setup-work-for-devices-that-don-t-do-INTx.patch
 	patches.drivers/nvme-0249-fail-pci-initialization-if-the-device-doesn-t-h.patch
-
+	patches.drivers/nvme-0250-Return-0-from-make-request-on-ended-bio.patch
 
 	patches.drivers/mtip32xx-0001-Add-driver-for-Micron-RealSSD-pcie-flash-cards.patch
 	patches.drivers/mtip32xx-0002-fix-warnings-errors-on-32-bit-compiles.patch
