- Btrfs: move fs/btrfs/ioctl.h to include/uapi/linux/btrfs.h (bsc#925073 FATE#308234).
- Refresh
  patches.suse/btrfs-1055-add-no-file-data-flag-to-btrfs-send-ioctl.patch.
- Refresh
  patches.suse/btrfs-1070-Add-a-new-ioctl-to-get-the-label-of-a-mounted-.patch.
- Refresh
  patches.suse/btrfs-1071-set-change-the-label-of-a-mounted-file-system.patch.
- Refresh patches.suse/btrfs-1216-rescan-for-qgroups.patch.
- Refresh
  patches.suse/btrfs-1300-add-ioctl-to-wait-for-qgroup-rescan-completion.patch.
- Refresh patches.suse/btrfs-1419-offline-dedupe.patch.
- Refresh
  patches.suse/btrfs-8014-add-new-ioctl-to-determine-size-of-compressed-.patch.
- Refresh
  patches.suse/btrfs-8236-retrieve-more-info-from-FS_INFO-ioctl.patch.

--- a/series.conf
+++ b/series.conf
@@ -3553,6 +3553,7 @@
 	patches.suse/btrfs-1024-traverse-and-flush-the-delalloc-inodes-once.patch
 	patches.suse/btrfs-1025-don-t-traverse-the-ordered-operation-list-repe.patch
 	patches.suse/btrfs-1026-Check-CAP_DAC_READ_SEARCH-for-btrfs_IOC_INO_PA.patch
+	patches.suse/btrfs-1026-move-fs-btrfs-ioctl.h-to-include-uapi-linux-bt.patch
 	patches.suse/btrfs-1027-protect-fs_info-alloc_start.patch
 	patches.suse/btrfs-1028-use-percpu-counter-for-dirty-metadata-count.patch
 	patches.suse/btrfs-1029-use-percpu-counter-for-fs_info-delalloc_bytes.patch
