--- a/series.conf
+++ b/series.conf
@@ -16886,6 +16886,7 @@
 	patches.drivers/mlx4-0157-net-mlx4_core-Expose-physical-port-id-as-PF-VF-capab.patch
 	patches.drivers/mlx4-0158-net-mlx4_en-Configure-the-XPS-queue-mapping-on-drive.patch
 	patches.drivers/mlx4-0159-net-mlx4_core-Set-CQE-EQE-size-to-64B-by-default.patch
+	patches.fixes/mlx4_core-Disable-64b-CQE-EQE-by-default.patch
 	patches.drivers/mlx4-0160-net-mlx4_en-Ignore-irrelevant-hypervisor-events.patch
 	patches.drivers/mlx4-0161-net-mlx4_en-Add-NAPI-support-for-transmit-side.patch
 	patches.drivers/mlx4-0162-net-mlx4_core-Check-port-number-for-validity-before-.patch
