lib: cpu_rmap: avoid flushing all workqueues (bsc922339).

--- a/series.conf
+++ b/series.conf
@@ -2184,6 +2184,9 @@
 
 	patches.drivers/0012-skbuff-update-struct-sk_buff-members-comments.patch
 
+	# bsc#922339
+	patches.fixes/lib-cpu_rmap-avoid-flushing-all-workqueues.patch
+
 	########################################################
 	# tipc
 	########################################################
