--- a/series.conf
+++ b/series.conf
@@ -2246,6 +2246,7 @@
 	patches.fixes/cifs-ensure-that-uncached-writes-handle-unmapped-are.patch
 	patches.fixes/cifs-delay-super-block-destruction-until-all-cifsFil.patch
 	patches.fixes/cifs-fix-use-after-free-bug-in-find_writable_file.patch
+	patches.fixes/limit-allocation-of-crypto-mechanisms-to-dialect.patch
 
 	########################################################
 	# ext2/ext3
