--- a/series.conf
+++ b/series.conf
@@ -17039,6 +17039,7 @@
 	patches.drivers/net-mlx4_en-Doorbell-is-byteswapped-in-Little-Endian.patch
 	patches.drivers/mlx4-0001-net-mlx4_core-Maintain-a-persistent-memory-for-mlx4-.patch
 	patches.drivers/mlx4-0002-net-mlx4_core-Set-device-configuration-data-to-be-pe.patch
+	patches.drivers/mlx4-0003-net-mlx4_core-Refactor-the-catas-flow-to-work-per-de.patch
 
 	# bnx2x SP4 update (bsc#908684 FATE#317539)
 	patches.drivers/bnx2x-0001-bnx2x-remove-__dev-attributes.patch
