net/mlx4_core: Set device configuration data to be persistent across reset (bug#924708).

--- a/series.conf
+++ b/series.conf
@@ -17038,6 +17038,7 @@
 	patches.drivers/mlx4-0296-net-mlx4_core-Limit-count-field-to-24-bits-in-qp_all.patch
 	patches.drivers/net-mlx4_en-Doorbell-is-byteswapped-in-Little-Endian.patch
 	patches.drivers/mlx4-0001-net-mlx4_core-Maintain-a-persistent-memory-for-mlx4-.patch
+	patches.drivers/mlx4-0002-net-mlx4_core-Set-device-configuration-data-to-be-pe.patch
 
 	# bnx2x SP4 update (bsc#908684 FATE#317539)
 	patches.drivers/bnx2x-0001-bnx2x-remove-__dev-attributes.patch
