net/mlx4_core: Activate reset flow upon fatal command cases (bug#924708).

--- a/series.conf
+++ b/series.conf
@@ -17041,6 +17041,7 @@
 	patches.drivers/mlx4-0002-net-mlx4_core-Set-device-configuration-data-to-be-pe.patch
 	patches.drivers/mlx4-0003-net-mlx4_core-Refactor-the-catas-flow-to-work-per-de.patch
 	patches.drivers/mlx4-0004-net-mlx4_core-Enhance-the-catas-flow-to-support-devi.patch
+	patches.drivers/mlx4-0005-net-mlx4_core-Activate-reset-flow-upon-fatal-command.patch
 
 	# bnx2x SP4 update (bsc#908684 FATE#317539)
 	patches.drivers/bnx2x-0001-bnx2x-remove-__dev-attributes.patch
