--- a/series.conf
+++ b/series.conf
@@ -17044,6 +17044,7 @@
 	patches.drivers/mlx4-0005-net-mlx4_core-Activate-reset-flow-upon-fatal-command.patch
 	patches.drivers/mlx4-0006-net-mlx4_core-Manage-interface-state-for-Reset-flow-.patch
 	patches.drivers/mlx4-0007-net-mlx4_core-Handle-AER-flow-properly.patch
+	patches.drivers/mlx4-0008-net-mlx4_core-Enable-device-recovery-flow-with-SRIOV.patch
 
 	# bnx2x SP4 update (bsc#908684 FATE#317539)
 	patches.drivers/bnx2x-0001-bnx2x-remove-__dev-attributes.patch
