net/mlx4_core: Handle AER flow properly (bug#924708).

--- a/series.conf
+++ b/series.conf
@@ -17043,6 +17043,7 @@
 	patches.drivers/mlx4-0004-net-mlx4_core-Enhance-the-catas-flow-to-support-devi.patch
 	patches.drivers/mlx4-0005-net-mlx4_core-Activate-reset-flow-upon-fatal-command.patch
 	patches.drivers/mlx4-0006-net-mlx4_core-Manage-interface-state-for-Reset-flow-.patch
+	patches.drivers/mlx4-0007-net-mlx4_core-Handle-AER-flow-properly.patch
 
 	# bnx2x SP4 update (bsc#908684 FATE#317539)
 	patches.drivers/bnx2x-0001-bnx2x-remove-__dev-attributes.patch
