--- a/series.conf
+++ b/series.conf
@@ -2185,6 +2185,7 @@
 	patches.fixes/drop_monitor-convert-to-modular-building.patch
 	patches.fixes/genetlink-add-auto-module-loading.patch
 	patches.fixes/net-add-MODULE_ALIAS_NET_PF_PROTO_NAME.patch
+	patches.fixes/genetlink-Build-a-generic-netlink-family-module-alia.patch
 
 	########################################################
 	# tipc
