drop_monitor: remove unnecessary break after return (FATE#318825).

--- a/series.conf
+++ b/series.conf
@@ -2188,6 +2188,7 @@
 	patches.fixes/genetlink-Build-a-generic-netlink-family-module-alia.patch
 	patches.fixes/drop_monitor-Add-module-alias-to-enable-automatic-mo.patch
 	patches.fixes/net-drop_monitor-fix-the-value-of-maxattr.patch
+	patches.fixes/drop_monitor-remove-unnecessary-break-after-return.patch
 
 	########################################################
 	# tipc
