net: Replace get_cpu_var through this_cpu_ptr (FATE#318825).

--- a/series.conf
+++ b/series.conf
@@ -2189,6 +2189,7 @@
 	patches.fixes/drop_monitor-Add-module-alias-to-enable-automatic-mo.patch
 	patches.fixes/net-drop_monitor-fix-the-value-of-maxattr.patch
 	patches.fixes/drop_monitor-remove-unnecessary-break-after-return.patch
+	patches.fixes/net-Replace-get_cpu_var-through-this_cpu_ptr.patch
 
 	########################################################
 	# tipc
