net: core: Use pr_<level> (FATE#318825).

--- a/series.conf
+++ b/series.conf
@@ -2175,17 +2175,13 @@
 	patches.suse/ipv6-add-ip6_flowlabel-helper.patch
 	patches.suse/flow_keys-Record-IP-layer-protocol-in-skb_flow_disse.patch
 	patches.suse/flow_dissector-Use-IPv6-flow-label-in-flow_dissector.patch
-
-	# bsc#909350 FATE#317546
 	patches.fixes/etherdevice-Add-ether_addr_equal_unaligned.patch
-
-	# bsc#909566 FATE#314306
 	patches.fixes/of_net.h-Provide-empty-functions-if-OF_NET-is-not-co.patch
-
 	patches.drivers/0012-skbuff-update-struct-sk_buff-members-comments.patch
-
-	# bsc#922339
 	patches.fixes/lib-cpu_rmap-avoid-flushing-all-workqueues.patch
+
+	# drop_monitor
+	patches.fixes/net-core-Use-pr_-level.patch
 
 	########################################################
 	# tipc
