net: drop_monitor: fix the value of maxattr (FATE#318825).

--- a/series.conf
+++ b/series.conf
@@ -2187,6 +2187,7 @@
 	patches.fixes/net-add-MODULE_ALIAS_NET_PF_PROTO_NAME.patch
 	patches.fixes/genetlink-Build-a-generic-netlink-family-module-alia.patch
 	patches.fixes/drop_monitor-Add-module-alias-to-enable-automatic-mo.patch
+	patches.fixes/net-drop_monitor-fix-the-value-of-maxattr.patch
 
 	########################################################
 	# tipc
