net: add MODULE_ALIAS_NET_PF_PROTO_NAME (FATE#318825).

--- a/series.conf
+++ b/series.conf
@@ -2184,6 +2184,7 @@
 	patches.fixes/net-core-Use-pr_-level.patch
 	patches.fixes/drop_monitor-convert-to-modular-building.patch
 	patches.fixes/genetlink-add-auto-module-loading.patch
+	patches.fixes/net-add-MODULE_ALIAS_NET_PF_PROTO_NAME.patch
 
 	########################################################
 	# tipc
