genetlink: add auto module loading (FATE#318825).

--- a/series.conf
+++ b/series.conf
@@ -2183,6 +2183,7 @@
 	# drop_monitor
 	patches.fixes/net-core-Use-pr_-level.patch
 	patches.fixes/drop_monitor-convert-to-modular-building.patch
+	patches.fixes/genetlink-add-auto-module-loading.patch
 
 	########################################################
 	# tipc
