drop_monitor: convert to modular building (FATE#318825).

--- a/series.conf
+++ b/series.conf
@@ -2182,6 +2182,7 @@
 
 	# drop_monitor
 	patches.fixes/net-core-Use-pr_-level.patch
+	patches.fixes/drop_monitor-convert-to-modular-building.patch
 
 	########################################################
 	# tipc
