--- a/series.conf
+++ b/series.conf
@@ -2186,6 +2186,7 @@
 	patches.fixes/genetlink-add-auto-module-loading.patch
 	patches.fixes/net-add-MODULE_ALIAS_NET_PF_PROTO_NAME.patch
 	patches.fixes/genetlink-Build-a-generic-netlink-family-module-alia.patch
+	patches.fixes/drop_monitor-Add-module-alias-to-enable-automatic-mo.patch
 
 	########################################################
 	# tipc
