net/mlx4: Cache line CQE/EQE stride fixes (bug#925337).

--- a/series.conf
+++ b/series.conf
@@ -17040,6 +17040,7 @@
 	patches.drivers/mlx4-0294-mlx4-fix-race-accessing-page-_count.patch
 	patches.drivers/mlx4-0295-net-mlx4_core-Call-synchronize_irq-before-freeing-EQ.patch
 	patches.drivers/mlx4-0296-net-mlx4_core-Limit-count-field-to-24-bits-in-qp_all.patch
+	patches.drivers/net-mlx4-Cache-line-CQE-EQE-stride-fixes.patch
 	patches.drivers/net-mlx4_en-Doorbell-is-byteswapped-in-Little-Endian.patch
 	patches.drivers/mlx4-0001-net-mlx4_core-Maintain-a-persistent-memory-for-mlx4-.patch
 	patches.drivers/mlx4-0002-net-mlx4_core-Set-device-configuration-data-to-be-pe.patch
