supported.conf: add drop_monitor
FATE#318825

--- a/supported.conf
+++ b/supported.conf
@@ -1989,6 +1989,7 @@
 		net/can/can-bcm
 		net/can/can-raw
 		net/ceph/libceph				# Ceph: support for rbd
+		net/core/drop_monitor
 		net/core/pktgen					# Packet Generator tool
 -		net/dccp/*
 -		net/decnet/decnet				# The Linux DECnet Network Protocol
