af_iucv: fix AF_IUCV sendmsg() errno (bnc#927287, LTC#123304).

--- a/series.conf
+++ b/series.conf
@@ -1253,6 +1253,8 @@
 
 	patches.arch/s390-sles11sp4-02-01-zcrypt-improve-device-probing.patch
 
+	patches.arch/s390-sles11sp4-03-01-af_iucv-fix-sendmsg-errno.patch
+
 	########################################################
 	# VM/FS patches
 	########################################################
