dasd: Fix unresumed device after suspend/resume (bnc#927287, LTC#123892).

--- a/series.conf
+++ b/series.conf
@@ -1254,6 +1254,7 @@
 	patches.arch/s390-sles11sp4-02-01-zcrypt-improve-device-probing.patch
 
 	patches.arch/s390-sles11sp4-03-01-af_iucv-fix-sendmsg-errno.patch
+	patches.arch/s390-sles11sp4-03-02-dasd-fix-unresumed-device-after-suspend-resume.patch
 
 	########################################################
 	# VM/FS patches
