--- a/series.conf
+++ b/series.conf
@@ -1255,6 +1255,7 @@
 
 	patches.arch/s390-sles11sp4-03-01-af_iucv-fix-sendmsg-errno.patch
 	patches.arch/s390-sles11sp4-03-02-dasd-fix-unresumed-device-after-suspend-resume.patch
+	patches.arch/s390-sles11sp4-03-03-dasd-fix-no-paths-after-suspend-resume.patch
 
 	########################################################
 	# VM/FS patches
