dasd: Fix inability to set a DASD device offline (bnc#927287, LTC#123905).

--- a/series.conf
+++ b/series.conf
@@ -1256,6 +1256,7 @@
 	patches.arch/s390-sles11sp4-03-01-af_iucv-fix-sendmsg-errno.patch
 	patches.arch/s390-sles11sp4-03-02-dasd-fix-unresumed-device-after-suspend-resume.patch
 	patches.arch/s390-sles11sp4-03-03-dasd-fix-no-paths-after-suspend-resume.patch
+	patches.arch/s390-sles11sp4-03-04-dasd-fix-inability-to-set-DASD-offline.patch
 
 	########################################################
 	# VM/FS patches
