s390/kernel: use stnsm 255 instead of stosm 0 (bnc#926797, LTC#KRN1514).

--- a/series.conf
+++ b/series.conf
@@ -1267,6 +1267,7 @@
 	patches.arch/s390-sles11sp4-z13base-05-spinlock-refactor.patch
 	patches.arch/s390-sles11sp4-z13base-06-spinlock-unlock.patch
 	patches.arch/s390-sles11sp4-z13base-07-stpt-stckf.patch
+	patches.arch/s390-sles11sp4-z13base-08-stosn-stnsm.patch
 
 	########################################################
 	# VM/FS patches
