--- a/series.conf
+++ b/series.conf
@@ -1272,6 +1272,7 @@
 	patches.arch/s390-sles11sp4-z13base-10-align-pie.patch
 	patches.arch/s390-sles11sp4-z13base-11-hotplug-skey-init.patch
 	patches.arch/s390-sles11sp4-z13base-12-large-page-debug.patch
+	patches.arch/s390-sles11sp4-z13base-13-edat1-detection.patch
 
 	########################################################
 	# VM/FS patches
