s390/spinlock: optimize spinlock code sequence (bnc#926797, LTC#KRN1514).

--- a/series.conf
+++ b/series.conf
@@ -1261,6 +1261,7 @@
 	patches.arch/s390-sles11sp4-03-04-dasd-fix-inability-to-set-DASD-offline.patch
 
 	patches.arch/s390-sles11sp4-z13base-01-spinlock-cleanup.patch
+	patches.arch/s390-sles11sp4-z13base-02-spinlock-optimize.patch
 
 	########################################################
 	# VM/FS patches
