s390/rwlock: add missing local_irq_restore calls (bnc#926797, LTC#KRN1514).

--- a/series.conf
+++ b/series.conf
@@ -1263,6 +1263,7 @@
 	patches.arch/s390-sles11sp4-z13base-01-spinlock-cleanup.patch
 	patches.arch/s390-sles11sp4-z13base-02-spinlock-optimize.patch
 	patches.arch/s390-sles11sp4-z13base-03-spinlock-test-first.patch
+	patches.arch/s390-sles11sp4-z13base-04-rwlock-irq-restore.patch
 
 	########################################################
 	# VM/FS patches
