s390: enable large page support with CONFIG_DEBUG_PAGEALLOC (bnc#926797, LTC#KRN1514).

--- a/series.conf
+++ b/series.conf
@@ -1271,6 +1271,7 @@
 	patches.arch/s390-sles11sp4-z13base-09-cache-aliasing-z13.patch
 	patches.arch/s390-sles11sp4-z13base-10-align-pie.patch
 	patches.arch/s390-sles11sp4-z13base-11-hotplug-skey-init.patch
+	patches.arch/s390-sles11sp4-z13base-12-large-page-debug.patch
 
 	########################################################
 	# VM/FS patches
