--- a/series.conf
+++ b/series.conf
@@ -1265,6 +1265,7 @@
 	patches.arch/s390-sles11sp4-z13base-03-spinlock-test-first.patch
 	patches.arch/s390-sles11sp4-z13base-04-rwlock-irq-restore.patch
 	patches.arch/s390-sles11sp4-z13base-05-spinlock-refactor.patch
+	patches.arch/s390-sles11sp4-z13base-06-spinlock-unlock.patch
 
 	########################################################
 	# VM/FS patches
