s390: avoid z13 cache aliasing (bnc#926797, LTC#KRN1514).

--- a/series.conf
+++ b/series.conf
@@ -1268,6 +1268,7 @@
 	patches.arch/s390-sles11sp4-z13base-06-spinlock-unlock.patch
 	patches.arch/s390-sles11sp4-z13base-07-stpt-stckf.patch
 	patches.arch/s390-sles11sp4-z13base-08-stosn-stnsm.patch
+	patches.arch/s390-sles11sp4-z13base-09-cache-aliasing-z13.patch
 
 	########################################################
 	# VM/FS patches
