s390/mm: use pfmf instruction to initialize storage keys (bnc#926797, LTC#KRN1514).

--- a/series.conf
+++ b/series.conf
@@ -1273,6 +1273,7 @@
 	patches.arch/s390-sles11sp4-z13base-11-hotplug-skey-init.patch
 	patches.arch/s390-sles11sp4-z13base-12-large-page-debug.patch
 	patches.arch/s390-sles11sp4-z13base-13-edat1-detection.patch
+	patches.arch/s390-sles11sp4-z13base-14-pfmf-skey-init.patch
 
 	########################################################
 	# VM/FS patches
