s390/memory hotplug: use pfmf instruction to initialize storage keys (bnc#926797, LTC#KRN1514).

--- a/series.conf
+++ b/series.conf
@@ -1274,6 +1274,7 @@
 	patches.arch/s390-sles11sp4-z13base-12-large-page-debug.patch
 	patches.arch/s390-sles11sp4-z13base-13-edat1-detection.patch
 	patches.arch/s390-sles11sp4-z13base-14-pfmf-skey-init.patch
+	patches.arch/s390-sles11sp4-z13base-15-pfmf-skey-hotplug.patch
 
 	########################################################
 	# VM/FS patches
