s390/mm: align 64-bit PIE binaries to 4GB (bnc#926797, LTC#KRN1514).

--- a/series.conf
+++ b/series.conf
@@ -1269,6 +1269,7 @@
 	patches.arch/s390-sles11sp4-z13base-07-stpt-stckf.patch
 	patches.arch/s390-sles11sp4-z13base-08-stosn-stnsm.patch
 	patches.arch/s390-sles11sp4-z13base-09-cache-aliasing-z13.patch
+	patches.arch/s390-sles11sp4-z13base-10-align-pie.patch
 
 	########################################################
 	# VM/FS patches
