--- a/series.conf
+++ b/series.conf
@@ -1260,6 +1260,8 @@
 	patches.arch/s390-sles11sp4-03-03-dasd-fix-no-paths-after-suspend-resume.patch
 	patches.arch/s390-sles11sp4-03-04-dasd-fix-inability-to-set-DASD-offline.patch
 
+	patches.arch/s390-sles11sp4-z13base-01-spinlock-cleanup.patch
+
 	########################################################
 	# VM/FS patches
 	########################################################
