--- a/series.conf
+++ b/series.conf
@@ -1270,6 +1270,7 @@
 	patches.arch/s390-sles11sp4-z13base-08-stosn-stnsm.patch
 	patches.arch/s390-sles11sp4-z13base-09-cache-aliasing-z13.patch
 	patches.arch/s390-sles11sp4-z13base-10-align-pie.patch
+	patches.arch/s390-sles11sp4-z13base-11-hotplug-skey-init.patch
 
 	########################################################
 	# VM/FS patches
