s390/spinlock: refactor arch_spin_lock_wait[_flags] (bnc#926797, LTC#KRN1514).

--- a/series.conf
+++ b/series.conf
@@ -1264,6 +1264,7 @@
 	patches.arch/s390-sles11sp4-z13base-02-spinlock-optimize.patch
 	patches.arch/s390-sles11sp4-z13base-03-spinlock-test-first.patch
 	patches.arch/s390-sles11sp4-z13base-04-rwlock-irq-restore.patch
+	patches.arch/s390-sles11sp4-z13base-05-spinlock-refactor.patch
 
 	########################################################
 	# VM/FS patches
