s390/mm: speedup storage key initialization (bnc#926797, LTC#KRN1514).

--- a/series.conf
+++ b/series.conf
@@ -1275,6 +1275,7 @@
 	patches.arch/s390-sles11sp4-z13base-13-edat1-detection.patch
 	patches.arch/s390-sles11sp4-z13base-14-pfmf-skey-init.patch
 	patches.arch/s390-sles11sp4-z13base-15-pfmf-skey-hotplug.patch
+	patches.arch/s390-sles11sp4-z13base-16-sske-mbc.patch
 
 	########################################################
 	# VM/FS patches
