s390/time: use stck clock fast for do_account_vtime (bnc#926797, LTC#KRN1514).

--- a/series.conf
+++ b/series.conf
@@ -1266,6 +1266,7 @@
 	patches.arch/s390-sles11sp4-z13base-04-rwlock-irq-restore.patch
 	patches.arch/s390-sles11sp4-z13base-05-spinlock-refactor.patch
 	patches.arch/s390-sles11sp4-z13base-06-spinlock-unlock.patch
+	patches.arch/s390-sles11sp4-z13base-07-stpt-stckf.patch
 
 	########################################################
 	# VM/FS patches
