--- a/series.conf
+++ b/series.conf
@@ -1262,6 +1262,7 @@
 
 	patches.arch/s390-sles11sp4-z13base-01-spinlock-cleanup.patch
 	patches.arch/s390-sles11sp4-z13base-02-spinlock-optimize.patch
+	patches.arch/s390-sles11sp4-z13base-03-spinlock-test-first.patch
 
 	########################################################
 	# VM/FS patches
