md: fix safe_mode buglet (bnc#926767).

--- a/series.conf
+++ b/series.conf
@@ -15098,6 +15098,7 @@
 	patches.fixes/0001-md-plug_cnt.fix
 
 	patches.fixes/0001-md-don-t-give-up-looking-for-spares-on-first-failure.patch
+	patches.fixes/0001-md-fix-safe_mode-buglet.patch
 
 	##########################################################
 	#
