ACPI / osl: speedup grace period in acpi_os_map_cleanup (bnc#877456).

--- a/series.conf
+++ b/series.conf
@@ -17076,6 +17076,9 @@
 	# bnc#882900, bnc#879695
 	patches.fixes/acpi-fix-bug-when-acpi-reset-register-is-implemented-in-system-memory.patch
 
+	# bnc#877456 long delays when booting under VMware Workstation
+	patches.fixes/0001-ACPI-osl-speedup-grace-period-in-acpi_os_map_cleanup.patch
+
 	# bnc#860441
 	patches.suse/0001-pm-hibernate-create-a-radix-tree-to-store-memory-bitmap
 	patches.suse/0002-pm-hibernate-add-memory_rtree_find_bit-function
