ACPI / sysfs: Treat the count field of counter_show() as unsigned (bnc#909312).

--- a/series.conf
+++ b/series.conf
@@ -17080,6 +17080,9 @@
 	# bnc#877456 long delays when booting under VMware Workstation
 	patches.fixes/0001-ACPI-osl-speedup-grace-period-in-acpi_os_map_cleanup.patch
 
+        # bsc#909312 busy kworker due to high ACPI event rate
+	patches.fixes/0001-ACPI-sysfs-Treat-the-count-field-of-counter_show-as-.patch
+
 	# bnc#860441
 	patches.suse/0001-pm-hibernate-create-a-radix-tree-to-store-memory-bitmap
 	patches.suse/0002-pm-hibernate-add-memory_rtree_find_bit-function
