Temporary fix for bsc#926960
Disables the EXTENT_SAME ioctl.

- Refresh
  patches.suse/btrfs-8014-add-new-ioctl-to-determine-size-of-compressed-.patch.
- Refresh
  patches.suse/btrfs-8283-replace-error-code-from-btrfs_drop_extents.patch.

--- a/series.conf
+++ b/series.conf
@@ -3720,7 +3720,7 @@
 	patches.suse/btrfs-1165-don-t-wait-on-ordered-extents-if-we-have-a-tra.patch
 	patches.suse/btrfs-1166-log-ram-bytes-properly.patch
 	patches.suse/btrfs-1167-fix-bad-extent-logging.patch
-	patches.suse/btrfs-1168-improve-the-performance-of-the-csums-lookup.patch
++dsterba patches.suse/btrfs-1168-improve-the-performance-of-the-csums-lookup.patch
 	patches.suse/btrfs-1169-ignore-device-open-failures-in-__btrfs_open_de.patch
 	patches.suse/btrfs-1170-abort-unlink-trans-in-missed-error-case.patch
 	patches.suse/btrfs-1171-creating-the-subvolume-qgroup-automatically-wh.patch
@@ -3848,7 +3848,7 @@
 	patches.suse/btrfs-1327-fix-backref-walking-when-we-hit-a-compressed-e.patch
 	patches.suse/btrfs-1328-make-sure-the-backref-walker-catches-all-refs-.patch
 	patches.suse/btrfs-1329-release-both-paths-before-logging-dir-changed-.patch
-	patches.suse/btrfs-1340-batch-the-extent-state-operation-when-reading-.patch
++dsterba patches.suse/btrfs-1340-batch-the-extent-state-operation-when-reading-.patch
 	patches.suse/btrfs-1338-introduce-lock_ref-unlock_ref.patch
 	patches.suse/btrfs-1339-don-t-loop-on-large-offsets-in-readdir.patch
 	# 3.11
@@ -3870,8 +3870,8 @@
 	patches.suse/btrfs-1415-fix-possible-memory-leak-in-find_parent_nodes.patch
 	patches.suse/btrfs-1416-abtract-out-range-locking-in-clone-ioctl.patch
 	patches.suse/btrfs-1417-btrfs_ioctl_clone-Move-clone-code-into-it-s-own-func.patch
-	patches.suse/btrfs-1418-Introduce-extent_read_full_page_nolock.patch
-	patches.suse/btrfs-1419-offline-dedupe.patch
++dsterba patches.suse/btrfs-1418-Introduce-extent_read_full_page_nolock.patch
++dsterba patches.suse/btrfs-1419-offline-dedupe.patch
 	patches.suse/btrfs-1420-don-t-allow-a-subvol-to-be-deleted-if-it-is-th.patch
 	patches.suse/btrfs-1421-fix-the-error-handling-wrt-orphan-items.patch
 	patches.suse/btrfs-1422-fix-oops-when-writing-dirty-qgroups-to-disk.patch
