net/mlx4_en: Use PTYS register to query ethtool settings (bug#924311).

--- a/series.conf
+++ b/series.conf
@@ -17069,6 +17069,7 @@
 	patches.drivers/mlx4-0001-net-mlx4_core-Introduce-ACCESS_REG-CMD-and-eth_prot_.patch
 	patches.drivers/mlx4-0002-net-mlx4_core-Add-ethernet-backplane-autoneg-device-.patch
 	patches.drivers/mlx4-0003-ethtool-net-mlx4_en-Add-100M-20G-56G-speeds-ethtool-.patch
+	patches.drivers/mlx4-0004-net-mlx4_en-Use-PTYS-register-to-query-ethtool-setti.patch
 	patches.drivers/net-mlx4_en-Doorbell-is-byteswapped-in-Little-Endian.patch
 	patches.drivers/mlx4-0001-net-mlx4_core-Maintain-a-persistent-memory-for-mlx4-.patch
 	patches.drivers/mlx4-0002-net-mlx4_core-Set-device-configuration-data-to-be-pe.patch
