rtc: Add more TGCS models for alarm disable quirk (bnc#927262).

--- a/series.conf
+++ b/series.conf
@@ -17020,6 +17020,7 @@
 	# bnc#805740 Truman reboot quirk, updated with upstream version
 	patches.fixes/rtc-cmos-add-an-alarm-disable-quirk-upstream_version.patch
 	patches.fixes/drivers-rtc-interface.c-fix-infinite-loop-in-initial.patch
+	patches.fixes/rtc-cmos-add-more-quirks-for-TGCS.patch
 
 	# bnc#833588: sporadic failure to mount root partition
 	patches.drivers/libata-set-proper-sk-when-ck_cond-is-set.patch
