bnx2x: VF can report link speed (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17338,6 +17338,7 @@
 	patches.drivers/bnx2x-0007-bnx2x-Fix-vlan-credit-issues-for-VFs.patch
 	patches.drivers/bnx2x-0008-bnx2x-Fix-failure-to-configure-VF-multicast-filters.patch
 	patches.drivers/bnx2x-0009-drivers-net-ethernet-broadcom-bnx2x-bnx2x_sriov.c-re.patch
+	patches.drivers/bnx2x-0010-bnx2x-VF-can-report-link-speed.patch
 
 	# bsc#914742, CVE-2014-8159
 	patches.fixes/ib-uverbs-prevent-integer-overflow-in-ib_umem_get-address-arithmetic.patch
