bnx2x: Add ndo_get_phys_port_id support (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17328,6 +17328,9 @@
 	patches.drivers/bnx2x-0241-bnx2x-Configure-device-endianity-on-driver-load-and-.patch
 	patches.drivers/bnx2x-0242-bnx2x-Force-fundamental-reset-for-EEH-recovery.patch
 
+        # bnx2x SP4 SRIOV update (bsc#908684 FATE#317539)
+	patches.drivers/bnx2x-0001-bnx2x-Add-ndo_get_phys_port_id-support.patch
+
 	# bsc#914742, CVE-2014-8159
 	patches.fixes/ib-uverbs-prevent-integer-overflow-in-ib_umem_get-address-arithmetic.patch
 
