bnx2x: Fix failure to configure VF multicast filters (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17336,6 +17336,7 @@
 	patches.drivers/bnx2x-0005-bnx2x-Don-t-allow-VFs-to-become-promiscuous.patch
 	patches.drivers/bnx2x-0006-bnx2x-Fix-possible-memory-leak-on-iov-error-flow.patch
 	patches.drivers/bnx2x-0007-bnx2x-Fix-vlan-credit-issues-for-VFs.patch
+	patches.drivers/bnx2x-0008-bnx2x-Fix-failure-to-configure-VF-multicast-filters.patch
 
 	# bsc#914742, CVE-2014-8159
 	patches.fixes/ib-uverbs-prevent-integer-overflow-in-ib_umem_get-address-arithmetic.patch
