bnx2x: Fix possible memory leak on iov error flow (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17334,6 +17334,7 @@
 	patches.drivers/bnx2x-0003-bnx2x-Add-missing-bit-in-default-Tx-switching.patch
 	patches.drivers/bnx2x-0004-bnx2x-Remove-the-sriov-VFOP-mechanism.patch
 	patches.drivers/bnx2x-0005-bnx2x-Don-t-allow-VFs-to-become-promiscuous.patch
+	patches.drivers/bnx2x-0006-bnx2x-Fix-possible-memory-leak-on-iov-error-flow.patch
 
 	# bsc#914742, CVE-2014-8159
 	patches.fixes/ib-uverbs-prevent-integer-overflow-in-ib_umem_get-address-arithmetic.patch
