--- a/series.conf
+++ b/series.conf
@@ -17330,6 +17330,7 @@
 
         # bnx2x SP4 SRIOV update (bsc#908684 FATE#317539)
 	patches.drivers/bnx2x-0001-bnx2x-Add-ndo_get_phys_port_id-support.patch
+	patches.drivers/bnx2x-0002-bnx2x-use-FW-7.8.17.patch
 
 	# bsc#914742, CVE-2014-8159
 	patches.fixes/ib-uverbs-prevent-integer-overflow-in-ib_umem_get-address-arithmetic.patch
