new helper: single_open_size() (bnc#928122).

--- a/series.conf
+++ b/series.conf
@@ -1713,6 +1713,7 @@
 
 	# /proc/stat fixlet
 	patches.fixes/proc-speed-up-proc-stat-handling.patch
+	patches.fixes/new-helper-single_open_size.patch
 
 	########################################################
 	# IPC patches
