--- a/series.conf
+++ b/series.conf
@@ -1711,6 +1711,9 @@
 
 	patches.fixes/configfs-fix-race-between-dentry-put-and-lookup.patch
 
+	# /proc/stat fixlet
+	patches.fixes/proc-speed-up-proc-stat-handling.patch
+
 	########################################################
 	# IPC patches
 	########################################################
