/proc/stat: convert to single_open_size() (bnc#928122).

--- a/series.conf
+++ b/series.conf
@@ -1714,6 +1714,7 @@
 	# /proc/stat fixlet
 	patches.fixes/proc-speed-up-proc-stat-handling.patch
 	patches.fixes/new-helper-single_open_size.patch
+	patches.fixes/proc-stat-convert-to-single_open_size.patch
 
 	########################################################
 	# IPC patches
