IPoIB: Fix race in deleting ipoib_neigh entries (bsc#924340).

--- a/series.conf
+++ b/series.conf
@@ -12669,6 +12669,7 @@
 	patches.fixes/ipoib-fix-memory-leak-in-the-neigh-table-deletion-fl.patch
 	patches.fixes/ipoib-fix-ab-ba-deadlock-when-deleting-neighbours.patch
 	patches.fixes/ipoib-fix-ipoib_neigh-hashing-to-use-the-correct-dad.patch
+	patches.fixes/ipoib-fix-race-in-deleting-ipoib_neigh-entries.patch
 	patches.fixes/qlge-0001-qlge-fix-an-vs-bug.patch
 	patches.fixes/net-relax-rcvbuf-limits.patch
 
