--- a/series.conf
+++ b/series.conf
@@ -12670,6 +12670,7 @@
 	patches.fixes/ipoib-fix-ab-ba-deadlock-when-deleting-neighbours.patch
 	patches.fixes/ipoib-fix-ipoib_neigh-hashing-to-use-the-correct-dad.patch
 	patches.fixes/ipoib-fix-race-in-deleting-ipoib_neigh-entries.patch
+	patches.fixes/ib-ipoib-add-missing-locking-when-cm-object-is-delet.patch
 	patches.fixes/qlge-0001-qlge-fix-an-vs-bug.patch
 	patches.fixes/net-relax-rcvbuf-limits.patch
 
