IB/ipoib: Fix RCU pointer dereference of wrong object (bsc#924340).

--- a/series.conf
+++ b/series.conf
@@ -12665,6 +12665,7 @@
 	patches.fixes/ipoib-convert-over-to-dev_lookup_neigh_skb.patch
 	patches.fixes/ipoib-need-to-do-dst_neigh_lookup_skb-outside-of-pri.patch
 	patches.fixes/ipoib-use-a-private-hash-table-for-path-lookup-in-xm.patch
+	patches.fixes/ib-ipoib-fix-rcu-pointer-dereference-of-wrong-object.patch
 	patches.fixes/qlge-0001-qlge-fix-an-vs-bug.patch
 	patches.fixes/net-relax-rcvbuf-limits.patch
 
