--- a/series.conf
+++ b/series.conf
@@ -12666,6 +12666,7 @@
 	patches.fixes/ipoib-need-to-do-dst_neigh_lookup_skb-outside-of-pri.patch
 	patches.fixes/ipoib-use-a-private-hash-table-for-path-lookup-in-xm.patch
 	patches.fixes/ib-ipoib-fix-rcu-pointer-dereference-of-wrong-object.patch
+	patches.fixes/ipoib-fix-memory-leak-in-the-neigh-table-deletion-fl.patch
 	patches.fixes/qlge-0001-qlge-fix-an-vs-bug.patch
 	patches.fixes/net-relax-rcvbuf-limits.patch
 
