IPoIB: Fix AB-BA deadlock when deleting neighbours (bsc#924340).

--- a/series.conf
+++ b/series.conf
@@ -12667,6 +12667,7 @@
 	patches.fixes/ipoib-use-a-private-hash-table-for-path-lookup-in-xm.patch
 	patches.fixes/ib-ipoib-fix-rcu-pointer-dereference-of-wrong-object.patch
 	patches.fixes/ipoib-fix-memory-leak-in-the-neigh-table-deletion-fl.patch
+	patches.fixes/ipoib-fix-ab-ba-deadlock-when-deleting-neighbours.patch
 	patches.fixes/qlge-0001-qlge-fix-an-vs-bug.patch
 	patches.fixes/net-relax-rcvbuf-limits.patch
 
