--- a/series.conf
+++ b/series.conf
@@ -12668,6 +12668,7 @@
 	patches.fixes/ib-ipoib-fix-rcu-pointer-dereference-of-wrong-object.patch
 	patches.fixes/ipoib-fix-memory-leak-in-the-neigh-table-deletion-fl.patch
 	patches.fixes/ipoib-fix-ab-ba-deadlock-when-deleting-neighbours.patch
+	patches.fixes/ipoib-fix-ipoib_neigh-hashing-to-use-the-correct-dad.patch
 	patches.fixes/qlge-0001-qlge-fix-an-vs-bug.patch
 	patches.fixes/net-relax-rcvbuf-limits.patch
 
