powerpc/perf: Cap 64bit userspace backtraces to PERF_MAX_STACK_DEPTH (bsc#928142).

--- a/series.conf
+++ b/series.conf
@@ -772,6 +772,8 @@
 	patches.arch/ppc-restore_default_window-no-liobn
 	patches.arch/ppc-remove-ddw-on-kexec
 
+	
+
 	patches.arch/ppc-pseries-disable-interrupts-around-IOMMU-percpu-data-accesses
 	patches.arch/ppc-pseries-iommu-disable-interrupts-around-percpu-data-accesses
 	patches.arch/ppc-iommu-reduce-spinlocking-in-iommu_free
@@ -839,6 +841,11 @@
 
         #bsc#917839
         patches.fixes/powerpc-bsc917839.patch
+
+	#bsc#928142
+	patches.arch/powerpc-perf-Cap-64bit-userspace-backtraces-to-PERF_.patch
+
+	#bsc#926016
 	########################################################
 	# S/390
 	########################################################
