Revert "pseries/iommu: Remove DDW on kexec" (bsc#926016).

--- a/series.conf
+++ b/series.conf
@@ -847,6 +847,7 @@
 
 	#bsc#926016
 	patches.arch/revert-ppc-ddw-extend-dynamic-DMA-Window-functionality
+	patches.arch/revert-ppc-remove-ddw-on-kexec
 	########################################################
 	# S/390
 	########################################################
