Revert "powerpc/pseries/iommu: remove default window before attempting DDW manipulation" (bsc#926016).

--- a/series.conf
+++ b/series.conf
@@ -846,6 +846,7 @@
 	patches.arch/powerpc-perf-Cap-64bit-userspace-backtraces-to-PERF_.patch
 
 	#bsc#926016
+	patches.arch/revert-ppc-ddw-extend-dynamic-DMA-Window-functionality
 	########################################################
 	# S/390
 	########################################################
