patches.arch/pseries-suppress-Trying-to-free-nonexistent-resource-warning.patch: (bsc#927190).

--- a/series.conf
+++ b/series.conf
@@ -848,6 +848,8 @@
 	#bsc#926016
 	patches.arch/revert-ppc-ddw-extend-dynamic-DMA-Window-functionality
 	patches.arch/revert-ppc-remove-ddw-on-kexec
+
+	
 	########################################################
 	# S/390
 	########################################################
@@ -1691,6 +1693,9 @@
 	patches.fixes/mm-change-__remove_pages-to-call-release_mem_region_adjustable
 
 	patches.fixes/mm-fix-BUG-in-__split_huge_page_pmd.patch
+
+	#bsc 927190
+	patches.arch/pseries-suppress-Trying-to-free-nonexistent-resource-warning.patch
 
 	# Boot time optimisations
 	patches.suse/x86-ioremap-Speed-up-check-for-RAM-pages.patch
