s390: z13 base performance (bnc#926797, LTC#KRN1514).

--- a/series.conf
+++ b/series.conf
@@ -1276,6 +1276,7 @@
 	patches.arch/s390-sles11sp4-z13base-14-pfmf-skey-init.patch
 	patches.arch/s390-sles11sp4-z13base-15-pfmf-skey-hotplug.patch
 	patches.arch/s390-sles11sp4-z13base-16-sske-mbc.patch
+	patches.arch/s390-sles11sp4-z13base-17-stack-rnd-compat-z13.patch
 
 	########################################################
 	# VM/FS patches
