Correct cpu affinity for dlpar added cpus (bsc#928970).

--- a/series.conf
+++ b/series.conf
@@ -849,6 +849,8 @@
 	patches.arch/revert-ppc-ddw-extend-dynamic-DMA-Window-functionality
 	patches.arch/revert-ppc-remove-ddw-on-kexec
 
+	#bsc#928970
+	patches.arch/pseries-Correct-cpu-affinity-for-dlpar-added-cpus.patch
 	
 	########################################################
 	# S/390
