- scsi: storvsc: Set the tablesize based on the information   given by the host (fate#317533 bnc#923775).

--- a/series.conf
+++ b/series.conf
@@ -21807,8 +21807,7 @@
 	patches.suse/msft-hv-0803-scsi-storvsc-Always-send-on-the-selected-outgoing-ch.patch
 	patches.suse/msft-hv-0804-scsi-storvsc-Retrieve-information-about-the-capabili.patch
 
-+923775	patches.suse/suse-hv-scsi-storvsc-Set-the-tablesize-based-on-the-informat.patch
-+923775	patches.suse/suse-hv-scsi-storvsc-Enable-clustering.patch
+	patches.suse/msft-hv-0807-scsi-storvsc-Set-the-tablesize-based-on-the-informat.patch
 
 	patches.suse/suse-hv-hv_kvp-sles11sp2-negotiate-serveral-versions.patch
 	patches.suse/suse-hv-rndis_filter-defines.patch
