--- a/series.conf
+++ b/series.conf
@@ -6495,6 +6495,7 @@
 	patches.drivers/qla2xxx-0503-Add-support-to-load-firmware-from-file-for-I.patch
 	patches.drivers/qla2xxx-0504-Add-message-for-sucessful-FW-dump-collected-.patch
 	patches.drivers/qla2xxx-0505-Add-udev-notification-to-save-fw-dump-for-IS.patch
+	patches.drivers/qla2xxx-0506-Add-serdes-read-write-support-for-ISP27XX.patch
 
 	patches.drivers/sd_dif-problem-with-verify-of-type-1-protection-information
 
