qla2xxx: Update driver version to 8.07.00.18-k (bnc#921081).

--- a/series.conf
+++ b/series.conf
@@ -6501,6 +6501,7 @@
 	patches.drivers/qla2xxx-0509-Prevent-multiple-firmware-dump-collection-fo.patch
 	patches.drivers/qla2xxx-0510-Fix-virtual-port-configuration-when-switch-p.patch
 	patches.drivers/qla2xxx-0511-Restore-physical-port-WWPN-only-when-port-do.patch
+	patches.drivers/qla2xxx-0512-Update-driver-version-to-8.07.00.18-k.patch
 
 	patches.drivers/sd_dif-problem-with-verify-of-type-1-protection-information
 
