--- a/series.conf
+++ b/series.conf
@@ -6498,6 +6498,7 @@
 	patches.drivers/qla2xxx-0506-Add-serdes-read-write-support-for-ISP27XX.patch
 	patches.drivers/qla2xxx-0507-Add-debugging-info-for-MBX-timeout.patch
 	patches.drivers/qla2xxx-0508-Disable-Interrupt-handshake-for-ISP27XX.patch
+	patches.drivers/qla2xxx-0509-Prevent-multiple-firmware-dump-collection-fo.patch
 
 	patches.drivers/sd_dif-problem-with-verify-of-type-1-protection-information
 
