--- a/series.conf
+++ b/series.conf
@@ -6493,6 +6493,7 @@
 	patches.drivers/qla2xxx-0501-Increase-the-wait-time-for-firmware-to-be-re.patch
 	patches.drivers/qla2xxx-0502-Fix-beacon-blink-for-ISP27XX.patch
 	patches.drivers/qla2xxx-0503-Add-support-to-load-firmware-from-file-for-I.patch
+	patches.drivers/qla2xxx-0504-Add-message-for-sucessful-FW-dump-collected-.patch
 
 	patches.drivers/sd_dif-problem-with-verify-of-type-1-protection-information
 
