qla2xxx: Fix beacon blink for ISP27XX (bnc#921081).

--- a/series.conf
+++ b/series.conf
@@ -6491,6 +6491,7 @@
 	patches.drivers/qla2xxx-0499-Fix-warnings-reported-by-static-checker.patch
 	patches.drivers/qla2xxx-0500-Fix-crash-due-to-wrong-casting-of-reg-for-IS.patch
 	patches.drivers/qla2xxx-0501-Increase-the-wait-time-for-firmware-to-be-re.patch
+	patches.drivers/qla2xxx-0502-Fix-beacon-blink-for-ISP27XX.patch
 
 	patches.drivers/sd_dif-problem-with-verify-of-type-1-protection-information
 
