qla2xxx: Fix virtual port configuration, when switch port is disabled/enabled (bnc#921081).

--- a/series.conf
+++ b/series.conf
@@ -6499,6 +6499,7 @@
 	patches.drivers/qla2xxx-0507-Add-debugging-info-for-MBX-timeout.patch
 	patches.drivers/qla2xxx-0508-Disable-Interrupt-handshake-for-ISP27XX.patch
 	patches.drivers/qla2xxx-0509-Prevent-multiple-firmware-dump-collection-fo.patch
+	patches.drivers/qla2xxx-0510-Fix-virtual-port-configuration-when-switch-p.patch
 
 	patches.drivers/sd_dif-problem-with-verify-of-type-1-protection-information
 
