qla2xxx: Disable Interrupt handshake for ISP27XX (bnc#921081).

--- a/series.conf
+++ b/series.conf
@@ -6497,6 +6497,7 @@
 	patches.drivers/qla2xxx-0505-Add-udev-notification-to-save-fw-dump-for-IS.patch
 	patches.drivers/qla2xxx-0506-Add-serdes-read-write-support-for-ISP27XX.patch
 	patches.drivers/qla2xxx-0507-Add-debugging-info-for-MBX-timeout.patch
+	patches.drivers/qla2xxx-0508-Disable-Interrupt-handshake-for-ISP27XX.patch
 
 	patches.drivers/sd_dif-problem-with-verify-of-type-1-protection-information
 
