qla2xxx: Increase the wait time for firmware to be ready for P3P (bnc#921081).

--- a/series.conf
+++ b/series.conf
@@ -6490,6 +6490,7 @@
 	patches.drivers/qla2xxx-Do-not-crash-system-for-sp-ref-count-zero.patch
 	patches.drivers/qla2xxx-0499-Fix-warnings-reported-by-static-checker.patch
 	patches.drivers/qla2xxx-0500-Fix-crash-due-to-wrong-casting-of-reg-for-IS.patch
+	patches.drivers/qla2xxx-0501-Increase-the-wait-time-for-firmware-to-be-re.patch
 
 	patches.drivers/sd_dif-problem-with-verify-of-type-1-protection-information
 
