--- a/series.conf
+++ b/series.conf
@@ -6500,6 +6500,7 @@
 	patches.drivers/qla2xxx-0508-Disable-Interrupt-handshake-for-ISP27XX.patch
 	patches.drivers/qla2xxx-0509-Prevent-multiple-firmware-dump-collection-fo.patch
 	patches.drivers/qla2xxx-0510-Fix-virtual-port-configuration-when-switch-p.patch
+	patches.drivers/qla2xxx-0511-Restore-physical-port-WWPN-only-when-port-do.patch
 
 	patches.drivers/sd_dif-problem-with-verify-of-type-1-protection-information
 
