qla2xxx: Fix warnings reported by static checker (bnc#921081).

--- a/series.conf
+++ b/series.conf
@@ -6488,6 +6488,7 @@
 	patches.drivers/qla2xxx-0496-fix-race-in-handling-rport-deletion-during-r.patch
 	patches.drivers/qla2xxx-0497-fix-busy-wait-regression.patch
 	patches.drivers/qla2xxx-Do-not-crash-system-for-sp-ref-count-zero.patch
+	patches.drivers/qla2xxx-0499-Fix-warnings-reported-by-static-checker.patch
 
 	patches.drivers/sd_dif-problem-with-verify-of-type-1-protection-information
 
