- scsi: storvsc: Fix a bug in copy_from_bounce_buffer()   (fate#317533 bnc#923775). - scsi: storvsc: Don't assume that the scatterlist is not chained   (fate#317533 bnc#923775). - Refresh   patches.suse/msft-hv-0807-scsi-storvsc-Set-the-tablesize-based-on-the-informat.patch.

--- a/series.conf
+++ b/series.conf
@@ -21820,7 +21820,8 @@
 	patches.suse/msft-hv-0802-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
 	patches.suse/msft-hv-0803-scsi-storvsc-Always-send-on-the-selected-outgoing-ch.patch
 	patches.suse/msft-hv-0804-scsi-storvsc-Retrieve-information-about-the-capabili.patch
-
+	patches.suse/msft-hv-0805-scsi-storvsc-Fix-a-bug-in-copy_from_bounce_buffer.patch
+	patches.suse/msft-hv-0806-scsi-storvsc-Don-t-assume-that-the-scatterlist-is-no.patch
 	patches.suse/msft-hv-0807-scsi-storvsc-Set-the-tablesize-based-on-the-informat.patch
 
 	patches.suse/suse-hv-hv_kvp-sles11sp2-negotiate-serveral-versions.patch
