Drivers: hv: vmbus: rename channel work queues (fate#317533).

--- a/series.conf
+++ b/series.conf
@@ -21818,6 +21818,7 @@
 	patches.suse/msft-hv-0741-hyperv-fix-sparse-warnings.patch
 	patches.suse/msft-hv-0742-hyperv-Implement-netvsc_get_channels-ethool-op.patch
 	patches.suse/msft-hv-0743-Drivers-hv-vmbus-prevent-cpu-offlining-on-newer-hype.patch
+	patches.suse/msft-hv-0744-Drivers-hv-vmbus-rename-channel-work-queues.patch
 
 	patches.suse/msft-hv-0801-scsi-storvsc-Increase-the-ring-buffer-size.patch
 	patches.suse/msft-hv-0802-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
