Drivers: hv: hv_balloon: correctly handle num_pages>INT_MAX case (fate#317533).

--- a/series.conf
+++ b/series.conf
@@ -21866,6 +21866,7 @@
 	patches.suse/msft-hv-0792-Drivers-hv-hv_balloon-survive-ballooning-request-wit.patch
 	patches.suse/msft-hv-0793-hv_vmbus-Add-gradually-increased-delay-for-retries-i.patch
 	patches.suse/msft-hv-0794-Drivers-hv-hv_balloon-correctly-handle-val.freeram-n.patch
+	patches.suse/msft-hv-0795-Drivers-hv-hv_balloon-correctly-handle-num_pages-INT.patch
 
 	patches.suse/msft-hv-0801-scsi-storvsc-Increase-the-ring-buffer-size.patch
 	patches.suse/msft-hv-0802-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
