hv_netvsc: remove vmbus_are_subchannels_present() in rndis_filter_device_add() (fate#317533).

--- a/series.conf
+++ b/series.conf
@@ -21856,6 +21856,7 @@
 	patches.suse/msft-hv-0780-Drivers-hv-vmbus-Export-the-vmbus_sendpacket_pagebuf.patch
 	patches.suse/msft-hv-0781-Drivers-hv-vmbus-Fix-a-siganlling-host-signalling-is.patch
 	patches.suse/msft-hv-0782-Drivers-hv-vmbus-Don-t-wait-after-requesting-offers.patch
+	patches.suse/msft-hv-0784-hv_netvsc-remove-vmbus_are_subchannels_present-in-rn.patch
 
 	patches.suse/msft-hv-0801-scsi-storvsc-Increase-the-ring-buffer-size.patch
 	patches.suse/msft-hv-0802-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
