--- a/series.conf
+++ b/series.conf
@@ -21850,6 +21850,7 @@
 	patches.suse/msft-hv-0773-Drivers-hv-hv_balloon-keep-locks-balanced-on-add_mem.patch
 	patches.suse/msft-hv-0774-Drivers-hv-hv_balloon-don-t-lose-memory-when-onlinin.patch
 	patches.suse/msft-hv-0775-Drivers-hv-vmbus-Correcting-truncation-error-for-con.patch
+	patches.suse/msft-hv-0776-hv-vmbus-missing-curly-braces-in-vmbus_process_offer.patch
 
 	patches.suse/msft-hv-0801-scsi-storvsc-Increase-the-ring-buffer-size.patch
 	patches.suse/msft-hv-0802-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
