--- a/series.conf
+++ b/series.conf
@@ -21840,6 +21840,7 @@
 	patches.suse/msft-hv-0763-Drivers-hv-hv_balloon-eliminate-the-trylock-path-in-.patch
 	patches.suse/msft-hv-0764-Drivers-hv-hv_balloon-report-offline-pages-as-being-.patch
 	patches.suse/msft-hv-0765-Drivers-hv-hv_balloon-refuse-to-balloon-below-the-fl.patch
+	patches.suse/msft-hv-0766-Drivers-hv-vmbus-Add-support-for-VMBus-panic-notifie.patch
 
 	patches.suse/msft-hv-0801-scsi-storvsc-Increase-the-ring-buffer-size.patch
 	patches.suse/msft-hv-0802-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
