--- a/series.conf
+++ b/series.conf
@@ -21821,6 +21821,7 @@
 	patches.suse/msft-hv-0744-Drivers-hv-vmbus-rename-channel-work-queues.patch
 	patches.suse/msft-hv-0745-Drivers-hv-vmbus-avoid-double-kfree-for-device_obj.patch
 	patches.suse/msft-hv-0746-Drivers-hv-vmbus-teardown-hv_vmbus_con-workqueue-and.patch
+	patches.suse/msft-hv-0747-drivers-hv-vmbus-Teardown-synthetic-interrupt-contro.patch
 
 	patches.suse/msft-hv-0801-scsi-storvsc-Increase-the-ring-buffer-size.patch
 	patches.suse/msft-hv-0802-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
