--- a/series.conf
+++ b/series.conf
@@ -21862,6 +21862,7 @@
 	patches.suse/msft-hv-0788-hv-don-t-schedule-new-works-in-vmbus_onoffer-vmbus_o.patch
 	patches.suse/msft-hv-0789-hv-remove-the-per-channel-workqueue.patch
 	patches.suse/msft-hv-0790-Drivers-hv-hv_balloon-do-not-online-pages-in-offline.patch
+	patches.suse/msft-hv-0791-Drivers-hv-hv_balloon-eliminate-jumps-in-piecewiese-.patch
 
 	patches.suse/msft-hv-0801-scsi-storvsc-Increase-the-ring-buffer-size.patch
 	patches.suse/msft-hv-0802-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
