Drivers: hv: vmbus: Remove the channel from the channel list(s) on failure (fate#317533).

--- a/series.conf
+++ b/series.conf
@@ -21834,6 +21834,7 @@
 	patches.suse/msft-hv-0757-Drivers-hv-vmbus-Properly-handle-child-device-remove.patch
 	patches.suse/msft-hv-0758-Drivers-hv-vmbus-Introduce-a-function-to-remove-a-re.patch
 	patches.suse/msft-hv-0759-Drivers-hv-vmbus-Handle-both-rescind-and-offer-messa.patch
+	patches.suse/msft-hv-0760-Drivers-hv-vmbus-Remove-the-channel-from-the-channel.patch
 
 	patches.suse/msft-hv-0801-scsi-storvsc-Increase-the-ring-buffer-size.patch
 	patches.suse/msft-hv-0802-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
