--- a/series.conf
+++ b/series.conf
@@ -21854,6 +21854,7 @@
 	patches.suse/msft-hv-0778-Drivers-hv-vmbus-Fix-a-bug-in-rescind-processing-in-.patch
 	patches.suse/msft-hv-0779-hv-hypervvssd-call-endmntent-before-call-setmntent-a.patch
 	patches.suse/msft-hv-0780-Drivers-hv-vmbus-Export-the-vmbus_sendpacket_pagebuf.patch
+	patches.suse/msft-hv-0781-Drivers-hv-vmbus-Fix-a-siganlling-host-signalling-is.patch
 
 	patches.suse/msft-hv-0801-scsi-storvsc-Increase-the-ring-buffer-size.patch
 	patches.suse/msft-hv-0802-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
