hyperv: Implement netvsc_get_channels() ethool op (fate#317533).

--- a/series.conf
+++ b/series.conf
@@ -21816,6 +21816,8 @@
 	patches.suse/msft-hv-0739-hyperv-match-wait_for_completion_timeout-return-type.patch
 	patches.suse/msft-hv-0740-hyperv-Fix-the-error-processing-in-netvsc_send.patch
 	patches.suse/msft-hv-0741-hyperv-fix-sparse-warnings.patch
+	patches.suse/msft-hv-0742-hyperv-Implement-netvsc_get_channels-ethool-op.patch
+
 	patches.suse/msft-hv-0801-scsi-storvsc-Increase-the-ring-buffer-size.patch
 	patches.suse/msft-hv-0802-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
 	patches.suse/msft-hv-0803-scsi-storvsc-Always-send-on-the-selected-outgoing-ch.patch
