Drivers: hv: vmbus: Export the vmbus_sendpacket_pagebuffer_ctl() (fate#317533).

--- a/series.conf
+++ b/series.conf
@@ -21853,6 +21853,7 @@
 	patches.suse/msft-hv-0776-hv-vmbus-missing-curly-braces-in-vmbus_process_offer.patch
 	patches.suse/msft-hv-0778-Drivers-hv-vmbus-Fix-a-bug-in-rescind-processing-in-.patch
 	patches.suse/msft-hv-0779-hv-hypervvssd-call-endmntent-before-call-setmntent-a.patch
+	patches.suse/msft-hv-0780-Drivers-hv-vmbus-Export-the-vmbus_sendpacket_pagebuf.patch
 
 	patches.suse/msft-hv-0801-scsi-storvsc-Increase-the-ring-buffer-size.patch
 	patches.suse/msft-hv-0802-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
