--- a/series.conf
+++ b/series.conf
@@ -21843,6 +21843,7 @@
 	patches.suse/msft-hv-0766-Drivers-hv-vmbus-Add-support-for-VMBus-panic-notifie.patch
 	patches.suse/msft-hv-0767-Drivers-hv-vmbus-Use-a-round-robin-algorithm-for-pic.patch
 	patches.suse/msft-hv-0768-Drivers-hv-vmbus-Suport-an-API-to-send-pagebuffers-w.patch
+	patches.suse/msft-hv-0769-Drivers-hv-vmbus-Suport-an-API-to-send-packet-with-a.patch
 
 	patches.suse/msft-hv-0801-scsi-storvsc-Increase-the-ring-buffer-size.patch
 	patches.suse/msft-hv-0802-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
