hyperv: hyperv_fb: match wait_for_completion_timeout return type (fate#317533).

--- a/series.conf
+++ b/series.conf
@@ -21845,6 +21845,7 @@
 	patches.suse/msft-hv-0768-Drivers-hv-vmbus-Suport-an-API-to-send-pagebuffers-w.patch
 	patches.suse/msft-hv-0769-Drivers-hv-vmbus-Suport-an-API-to-send-packet-with-a.patch
 	patches.suse/msft-hv-0770-mei-bus-can-be-static.patch
+	patches.suse/msft-hv-0771-hyperv-hyperv_fb-match-wait_for_completion_timeout-r.patch
 
 	patches.suse/msft-hv-0801-scsi-storvsc-Increase-the-ring-buffer-size.patch
 	patches.suse/msft-hv-0802-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
