Drivers: hv: vmbus: Introduce a function to remove a rescinded offer (fate#317533).

--- a/series.conf
+++ b/series.conf
@@ -21832,6 +21832,7 @@
 	patches.suse/msft-hv-0755-Drivers-hv-vmbus-Fix-a-bug-in-the-error-path-in-vmbu.patch
 	patches.suse/msft-hv-0756-Drivers-hv-vmbus-Add-support-for-the-NetworkDirect-G.patch
 	patches.suse/msft-hv-0757-Drivers-hv-vmbus-Properly-handle-child-device-remove.patch
+	patches.suse/msft-hv-0758-Drivers-hv-vmbus-Introduce-a-function-to-remove-a-re.patch
 
 	patches.suse/msft-hv-0801-scsi-storvsc-Increase-the-ring-buffer-size.patch
 	patches.suse/msft-hv-0802-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
