--- a/series.conf
+++ b/series.conf
@@ -21823,6 +21823,7 @@
 	patches.suse/msft-hv-0746-Drivers-hv-vmbus-teardown-hv_vmbus_con-workqueue-and.patch
 	patches.suse/msft-hv-0747-drivers-hv-vmbus-Teardown-synthetic-interrupt-contro.patch
 	patches.suse/msft-hv-0748-Drivers-hv-vmbus-Teardown-clockevent-devices-on-modu.patch
+	patches.suse/msft-hv-0749-hv-hv_util-move-vmbus_open-to-a-later-place.patch
 
 	patches.suse/msft-hv-0801-scsi-storvsc-Increase-the-ring-buffer-size.patch
 	patches.suse/msft-hv-0802-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
