--- a/series.conf
+++ b/series.conf
@@ -21837,6 +21837,7 @@
 	patches.suse/msft-hv-0760-Drivers-hv-vmbus-Remove-the-channel-from-the-channel.patch
 	patches.suse/msft-hv-0761-Drivers-hv-util-On-device-remove-close-the-channel-a.patch
 	patches.suse/msft-hv-0762-Drivers-hv-vmbus-Get-rid-of-some-unnecessary-message.patch
+	patches.suse/msft-hv-0763-Drivers-hv-hv_balloon-eliminate-the-trylock-path-in-.patch
 
 	patches.suse/msft-hv-0801-scsi-storvsc-Increase-the-ring-buffer-size.patch
 	patches.suse/msft-hv-0802-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
