hv: hv_balloon: match var type to return type of wait_for_completion (fate#317533).

--- a/series.conf
+++ b/series.conf
@@ -21828,6 +21828,7 @@
 	patches.suse/msft-hv-0751-hv-vmbus_open-reset-the-channel-state-on-ENOMEM.patch
 	patches.suse/msft-hv-0752-hv-channel-match-var-type-to-return-type-of-wait_for.patch
 	patches.suse/msft-hv-0753-hv-channel_mgmt-match-var-type-to-return-type-of-wai.patch
+	patches.suse/msft-hv-0754-hv-hv_balloon-match-var-type-to-return-type-of-wait_.patch
 
 	patches.suse/msft-hv-0801-scsi-storvsc-Increase-the-ring-buffer-size.patch
 	patches.suse/msft-hv-0802-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
