--- a/series.conf
+++ b/series.conf
@@ -21851,6 +21851,7 @@
 	patches.suse/msft-hv-0774-Drivers-hv-hv_balloon-don-t-lose-memory-when-onlinin.patch
 	patches.suse/msft-hv-0775-Drivers-hv-vmbus-Correcting-truncation-error-for-con.patch
 	patches.suse/msft-hv-0776-hv-vmbus-missing-curly-braces-in-vmbus_process_offer.patch
+	patches.suse/msft-hv-0778-Drivers-hv-vmbus-Fix-a-bug-in-rescind-processing-in-.patch
 
 	patches.suse/msft-hv-0801-scsi-storvsc-Increase-the-ring-buffer-size.patch
 	patches.suse/msft-hv-0802-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
