--- a/series.conf
+++ b/series.conf
@@ -21826,6 +21826,7 @@
 	patches.suse/msft-hv-0749-hv-hv_util-move-vmbus_open-to-a-later-place.patch
 	patches.suse/msft-hv-0750-hv-vmbus_post_msg-retry-the-hypercall-on-some-transi.patch
 	patches.suse/msft-hv-0751-hv-vmbus_open-reset-the-channel-state-on-ENOMEM.patch
+	patches.suse/msft-hv-0752-hv-channel-match-var-type-to-return-type-of-wait_for.patch
 
 	patches.suse/msft-hv-0801-scsi-storvsc-Increase-the-ring-buffer-size.patch
 	patches.suse/msft-hv-0802-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
