hv: remove the per-channel workqueue (fate#317533).

--- a/series.conf
+++ b/series.conf
@@ -21860,6 +21860,7 @@
 	patches.suse/msft-hv-0785-hv_netvsc-Cleanup-the-test-for-freeing-skb-when-we-u.patch
 	patches.suse/msft-hv-0787-hv-run-non-blocking-message-handlers-in-the-dispatch.patch
 	patches.suse/msft-hv-0788-hv-don-t-schedule-new-works-in-vmbus_onoffer-vmbus_o.patch
+	patches.suse/msft-hv-0789-hv-remove-the-per-channel-workqueue.patch
 
 	patches.suse/msft-hv-0801-scsi-storvsc-Increase-the-ring-buffer-size.patch
 	patches.suse/msft-hv-0802-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
